--- a/ProjetoStorytelling.ipynb
+++ b/ProjetoStorytelling.ipynb
@@ -133,7 +133,7 @@
         "outputId": "2aab9c54-4f07-4a36-f1c7-c3b9a8a202a0"
       },
       "source": [
-        "dataset = '/content/drive/MyDrive/Projetos Data Science /Storytelling/rest_data_us.csv'\n",
+        "dataset = 'rest_data_us.csv'\n",
         "df = pd.read_csv(dataset)\n",
         "df.sample(3)"
       ],
